<resources>
    <string name="app_name">InClass08</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="submitBtn">Submit</string>
    <string name="welcome">Welcome&#160;</string>
    <string name="textView">TextView</string>
    <string name="editProfile">Edit Profile</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="createNewAccount">Create New Account</string>
    <string name="name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="iListenerError">&#160;Must implement IListner</string>
    <string name="AppDetails">App Details</string>
    <string name="loginFailed">Login Failed. Please input valid user name or password</string>
    <string name="loginTag">login</string>
    <string name="noAccountFetched">No Account Fetched </string>
    <string name="enterAllDetails">Please Enter All Values</string>
    <string name="RegError">User Already Exists</string>
    <string name="update">Update Account</string>
    <string name="Registration">Register Account</string>
    <string name="AdapterError">Adapter is not found</string>
    <string name="noAppRec">No APP Record</string>
    <string name="appName">App Name</string>
    <string name="artistName">Artist Name</string>
    <string name="releaseDate">Release Date</string>
    <string name="AppCat">App Categories</string>
    <string name="NewForum">New Forum</string>
    <string name="Forums">Forums</string>

    <string name="EnterComments">Enter comment text!</string>

    <string name="Forum">Forum</string>
    <string name="logOut">Log Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Cancel">Cancel</string>
</resources>